dipoma_temp/project_code/03_ansible_kubernetes/test_deploy/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-back-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-back-app
  template:
    metadata:
      labels:
        app: multi-back-app
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: mtool-port
