dipoma_temp/project_code/03_ansible_kubernetes/test_deploy/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-back-service-ip
spec:
  ports:
  - name: mtool-http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: multi-back-app
  type: ClusterIP
