dipoma_temp/project_code/03_ansible_kubernetes/test_deploy/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-front-app-service-ip
spec:
  ports:
  - name: nginx-http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-front-app
  type: ClusterIP
